--- a/css/index.css
+++ b/css/index.css
@@ -684,6 +684,7 @@ a, a:hover {
     margin:auto;
     margin-top:50px;
     text-align: left;
+    margin-bottom:40px;
 }
 .contain-footer h1{
     color:#b3401a;
