--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,119 @@
 *{
-    margin: 0;
+    margin:0;
     padding:0;
 }
-
-
 body {
-font-family: Helvetica, sans-serif;
-text-align: center;
-font-size: 50;
-overflow-x: hidden;
-max-width: 100%;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+    font-size: 50;
+    overflow-x: hidden;
+    max-width: 100%;
+    background-color: #f7fcfc;
 
 }
-
-.Main-page{
-    position: relative;
-    overflow-x: hidden;
-    height: 100vh;
+.header{
+    position:relative;
     width:100vw;
-    background-position: center;
-    background-repeat: no-repeat;
+    height:100vh;
+    background-image: url(../images/main-page-bg.png);
     background-size: cover;
+    background-position: center;
+}
+
+svg{
+    position:absolute;
+    width:500px;
+    height:500px;
+    top:16%;
+    right:5%;
+}
+.page-text{
+    position: absolute;
+    top:50%;
+    left:25%;
+    transform: translate(-50%,-50%);
+    color:rgb(22, 51, 51);
+    font-size: 40px;
+    max-width: 40%;
+    margin:auto;
+}
+@media only screen and (max-width:670px)
+{
+    .page-text{
+        font-size:30px;
+    }
+}
+.logo {
+    position:absolute;
+    z-index:100;
+    left:45%;
+    top: 5%;
+}
+.logo img{
+    width:20%;
+    height:10%;
+}
+@media only screen and (max-width:850px)
+{
+    svg{
+        width:400px;
+        height:400px;
+        top:20%;
+    }
+}
+
+@media only screen and (max-width:650px)
+{
+    svg{
+        top:32%;
+        right:8%;
+    }
+    .page-text{
+        top:26%;
+        left:50%;
+        max-width: 50%;
+        font-size: 25px;
+    }
+}
+@media only screen and (max-width:450px)
+{
+    
+    svg{
+        width:350px;
+        height:350px;
+        top:36%;
+        right:6%;
+    }
+}
+@media only screen and (max-width:415px)
+{
+    
+    svg{
+        width:310px;
+        height:310px;
+        top:40%;
+        right:6%;
+    }
+}
+@media only screen and (max-width:374px)
+{
+    
+    svg{
+        width:310px;
+        height:310px;
+        top:41%;
+        right:3%;
+    }
+}
+@media only screen and (max-width:345px)
+{
+    
+    svg{
+        width:290px;
+        height:290px;
+        top:42%;
+        right:2%;
+    }
 }
 .menu{
     position: absolute;
@@ -28,12 +121,12 @@ max-width: 100%;
     z-index: 8;   
     top:30px;
     left:30px; 
-    border: 2px double white;
+    border: 2px double rgb(22, 51, 51);
     transition: all 0.5s;
 }
 .menu:hover{
-    box-shadow: 0 0 10px #fe6f27;
-    border: 2px double #fe6f27ca;
+    box-shadow: 0 0 10px rgb(22, 51, 51);
+    border: 2px double rgb(22, 51, 51);
 
 }
 .bars .line-1,
@@ -43,26 +136,26 @@ max-width: 100%;
     width:20px;
     height:3px;
     margin:4px;
-    background-color:white;
+    background-color:rgb(22, 51, 51);
     transition: all 0.5s;
 
 }
 .bars :hover{
-    box-shadow: 0 0 10px #fe6f27;
-    background-color:#fe6f27;
+    box-shadow: 0 0 10px rgb(22, 51, 51);
+    background-color:rgb(22, 51, 51);
 
 }
 
 .menu-text{
-    color: white;
+    color: rgb(22, 51, 51);
     font-weight: bolder;
     font-size: 15px;
     padding:4px;
     transition:all 0.5s;
 }
 .menu-text:hover{
-    text-shadow: 0 0 10px #fe6f27;
-    background-color: #fe6f27;
+    text-shadow: 0 0 10px rgb(22, 51, 51);
+    background-color: rgb(151, 214, 214);
 
 }
 .menu-page{
@@ -131,20 +224,19 @@ nav li a{
 }
 .cross-1:hover,
 .cross-2:hover{
-    box-shadow: 0 0 10px #fe6f27;
+    box-shadow: 0 0 10px rgb(22, 51, 51);
 
 }
 .cross-text:hover{
-    text-shadow: 0 0 10px #fe6f27;
-    background-color: #fe6f27;
+    text-shadow: 0 0 10px rgb(22, 51, 51);
+    background-color: rgb(55, 102, 102);
 }
 .cross-button{
     transition: all 0.5s;
 
 }
 .cross-button:hover{
-    box-shadow: 0 0 10px #fe6f27;
-    border:2px double #fe6f27;
+    box-shadow: 0 0 10px rgb(22, 51, 51);
 }
 .menu:hover{
     cursor: pointer;
@@ -161,8 +253,9 @@ nav a{
 
 }
 nav a:hover{
-    text-shadow: 0 0 10px #fe6f27;
-    color:#fe6f27;
+    text-shadow: 0 0 10px rgb(22, 51, 51);
+    color:rgb(166, 226, 226);
+    text-decoration:underline;
 }
 .logo {
     position:absolute;
@@ -176,7 +269,7 @@ nav a:hover{
 }
 
 .information span{
-    color: #fe6f27;
+    color: rgb(158, 233, 233);
     font-weight: bold;
 }
 .information h1{
@@ -187,460 +280,119 @@ nav a:hover{
     font-size: 20px;
     font-weight: lighter;
 }
-a {
-  color: #fff;
-  text-decoration: none;
-}
-.me {
-  width: 400px;
-  margin: 90px auto;
-}
-.me p,
-.me h1 {
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  text-align: center;
-}
-.me p {
-  font-weight: 200;
-}
-.me span {
-  font-weight: bold;
-}
 .social {
-  position: absolute;
-  top:60%;
-  left:1%
-}
-.social ul {
-  padding: 5px;
-  -webkit-transform: translate(-270px, 0);
-  -moz-transform: translate(-270px, 0);
-  -ms-transform: translate(-270px, 0);
-  -o-transform: translate(-270px, 0);
-  transform: translate(-270px, 0);
-}
-.social ul li{
-  display: block;
-  margin: 4px;
-  background: rgba(0, 0, 0, 0.36);
-  width: 300px;
-  text-align: right;
-  padding: 10px;
-  -webkit-border-radius: 0 30px 30px 0;
-  -moz-border-radius: 0 30px 30px 0;
-  border-radius: 0 30px 30px 0;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
-  transition: all 1s;
-}
-.social ul li:hover {
-  -webkit-transform: translate(110px, 0);
-  -moz-transform: translate(110px, 0);
-  -ms-transform: translate(110px, 0);
-  -o-transform: translate(110px, 0);
-  transform: translate(110px, 0);
-  background: rgba(255, 255, 255, 0.4);
-}
-.social ul li:hover a {
-  color: #000;
-}
-.social ul li:hover i {
-  color: #fff;
-  background: #fe6f27;
-  -webkit-transform: rotate(360deg);
-  -moz-transform: rotate(360deg);
-  -ms-transform: rotate(360deg);
-  -o-transform: rotate(360deg);
-  transform: rotate(360deg);
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
-  transition: all 1s;
-}
-.social ul li i{
-  margin-left: 30px;
-  color: #000;
-  background: #fff;
-  padding: 10px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  font-size: 20px;
-  background: #ffffff;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-}
-.social a{
-    font-size: 18px;
-}
-
-@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
-
-a, a:hover {
-	text-decoration: none;
-}
-
-.socialbtns, .socialbtns ul, .socialbtns li {
-  margin: 0;
-  padding: 5px;
-}
-
-.socialbtns li {
-    list-style: none outside none;
-    display: inline-block;
-}
-
-.socialbtns .fa {
-	width: 40px;
-    height: 28px;
-	color: #000;
-	background-color: #FFF;
-	padding-top: 12px;
-	border-radius: 22px;
-	-moz-border-radius: 22px;
-	-webkit-border-radius: 22px;
-	-o-border-radius: 22px;
-    transition: all 0.5s;
-}
-
-.socialbtns .fa:hover {
-	color: #FFF;
-	background-color: #fe6f27;
-}
-.card-page{
-    width:100vw;
-    height:200vh;
-    background-color: #000000;
-}
-.card-start-text h1{
-    color:#fe6f27;
-    font-size: 40px;
-    font-weight: bold;
-    padding-top:40px;
-}
-.cards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width:80%;
-    margin:auto;
-    margin-top:50px;
-    margin-bottom:50px;
-
-}
-.card{
-    width:300px;
-    height:400px;
-    border:1px double rgb(119, 119, 119);
-    margin-right:10px;
-    margin-left:10px;
-    margin-top:12px;
-    margin-bottom:12px;
-}
-.card img{
-    width:160px;
-    height:140px;
-}
-.card h1{
-    font-family: sans-serif;
-    color: white;
-    
-}
-.card-information{
-    max-width: 70%;
-    margin:auto;
-}
-.card-information p{
-    color:#b6b6b6;
-    margin-top: 10px;
-}
-.nav-btn{
-    padding:5px;
-    color:white;
-    width:40%;
-    height: 30px;
-    margin:auto;
-    margin-top: 8%;
-    padding-top:14px;
-    border:1px solid grey;
-    border-radius: 2px;
-    color:#fff;
-    transition: all 0.5s;
-}
-.nav-btn:hover {
-    color:#fe6f27;
-    border:1px solid #fe6f27;
-
-}
-.card-4 img{
-    width:140px;
-    height:100px;
-    margin-top:20px;
-    margin-bottom:25px;
-}
-.card a{
-    font-weight: bolder;
-}
-.social .facebook{
-    font-style: normal;
-    padding:5px;
-}
-.untitled {
     position: absolute;
-    height: 100%;
-    width: 100%;
-    animation: rotateHue infinite 32s linear;
-    animation-delay: 1s;
-}
-@keyframes rotateHue {
-    0% {
-        filter: hue-rotate(0deg);
-   }
-    20% {
-        filter: hue-rotate(0deg);
-   }
-    25% {
-        filter: hue-rotate(90deg);
-   }
-    45% {
-        filter: hue-rotate(90deg);
-   }
-    50% {
-        filter: hue-rotate(180deg);
-   }
-    70% {
-        filter: hue-rotate(180deg);
-   }
-    75% {
-        filter: hue-rotate(270deg);
-   }
-    95% {
-        filter: hue-rotate(270deg);
-   }
-    100% {
-        filter: hue-rotate(360deg);
-   }
-}
-.untitled__shutters {
-    position: absolute;
-    height: 150vmax;
-    width: 150vmax;
-    left: calc(50% - 75vmax);
-    top: calc(50% - 75vmax);
-    pointer-events: none;
-    z-index: 2;
-    animation: rotateFrame 16s linear infinite;
-}
-@keyframes rotateFrame {
-    0% {
-        transform: rotate(0deg);
-   }
-    100% {
-        transform: rotate(180deg);
-   }
-}
-.untitled__shutters:before, .untitled__shutters:after {
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 50%;
-    transform: translate3d(-50%, 0, 0);
-    background-color: #b3401a;
-    pointer-events: auto;
-}
-.untitled__shutters:before {
-    bottom: 50%;
-    animation: openTop 8s infinite;
-}
-@keyframes openTop {
-    0% {
-        transform: translate3d(-50%, 0, 0);
-        animation-timing-function: cubic-bezier(0.8, 0, 0.1, 1);
-   }
-    40% {
-        transform: translate3d(-50%, -65vmax, 0);
-        animation-timing-functon: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-   }
-    70% {
-        transform: translate3d(-50%, -65vmax, 0);
-        animation-timing-functon: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-   }
-    100% {
-        transform: translate3d(-50%, 0, 0);
-        animation-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-   }
-}
-.untitled__shutters:after {
-    top: 50%;
-    animation: openBottom 8s infinite;
-}
-@keyframes openBottom {
-    0% {
-        transform: translate3d(-50%, 0, 0);
-        animation-timing-function: cubic-bezier(0.8, 0, 0.1, 1);
-   }
-    40% {
-        transform: translate3d(-50%, 65vmax, 0);
-        animation-timing-functon: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-   }
-    70% {
-        transform: translate3d(-50%, 65vmax, 0);
-        animation-timing-functon: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-   }
-    100% {
-        transform: translate3d(-50%, 0, 0);
-        animation-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-   }
-}
-.untitled__slides {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: #b3401a;
-}
-.untitled__slide {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    animation: showHideSlide infinite 32s steps(1);
-}
-@keyframes showHideSlide {
-    0% {
-        opacity: 1;
-        pointer-events: auto;
-        z-index: 1;
-   }
-    25% {
-        opacity: 0;
-        pointer-events: none;
-        z-index: -1;
-   }
-    100% {
-        opacity: 0;
-        pointer-events: none;
-        z-index: -1;
-   }
-}
-.untitled__slide:nth-child(1) {
-    animation-delay: 0s;
-}
-.untitled__slide:nth-child(1) .untitled__slideBg {
-    background-image: url(../images/tempback.jpg);
-
-}
-.untitled__slide:nth-child(2) {
-    animation-delay: 8s;
-}
-.untitled__slide:nth-child(2) .untitled__slideBg {
-    background-image: url(../images/temp-back20.jpg);
-
-}
-.untitled__slide:nth-child(3) {
-    animation-delay: 16s;
-}
-.untitled__slide:nth-child(3) .untitled__slideBg {
-    background-image: url(../images/header-image.jpg);
-
-}
-.untitled__slide:nth-child(4) {
-    animation-delay: 24s;
-}
-.untitled__slide:nth-child(4) .untitled__slideBg {
-    background-image: url(../images/header-image.jpg);
-
-}
-.untitled__slideBg {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-size: cover;
-    background-position: center;
-    background-color: #b3401a;
-    background-blend-mode: hard-light;
-    opacity: 1;
-    z-index: -1;
-    animation: bgInOut 8s infinite;
-}
-@keyframes bgInOut {
-    0% {
-        transform: rotate(-45deg) scale(1.1);
-        animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
-   }
-    33% {
-        transform: rotate(0deg);
-   }
-    50% {
-        transform: rotate(0deg);
-   }
-    66% {
-        transform: rotate(0deg);
-        animation-timing-function: cubic-bezier(0.895, 0.03, 0.685, 0.22);
-   }
-    100% {
-        transform: rotate(45deg) scale(0.9);
-   }
-}
-.untitled__slideContent {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
-    color: white;
-    font-family: 'Abril Fatface', sans-serif;
-    line-height: 0.8;
-    letter-spacing: -0.025em;
-    z-index: 2;
-    opacity: 1;
-    text-shadow: 0 0 0.5em rgba(179, 64, 26, 0.25);
-    mix-blend-mode: lighten;
-}
-.untitled__slideContent h1 {
+    top:60%;
+    left:1%
+  }
+  .social ul {
+    padding: 5px;
+    -webkit-transform: translate(-270px, 0);
+    -moz-transform: translate(-270px, 0);
+    -ms-transform: translate(-270px, 0);
+    -o-transform: translate(-270px, 0);
+    transform: translate(-270px, 0);
+  }
+  .social ul li{
+      z-index: -1;
     display: block;
-    font-size: 8vmin;
-    line-height: 125%;
-}
-
-.Main-page{
-    max-height:100vh;
-    overflow-y:hidden;
-    
-}
-
-@media only screen and (max-width:800px)
-{
-    .card-page{
-        height:280vh;
-    }
-}
-@media only screen and (max-width:325px)
-{
-    .card img{
-        width:130px;
-        height: 110px
-        
-    }
-    .card-4 img{
-        width:85px;
-        height:65px;
-    }
-}
-.contain-menu-content{
+    margin: 4px;
+    background: rgba(0, 0, 0, 0.36);
+    width: 300px;
+    text-align: right;
+    padding: 10px;
+    -webkit-border-radius: 0 30px 30px 0;
+    -moz-border-radius: 0 30px 30px 0;
+    border-radius: 0 30px 30px 0;
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -ms-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+  }
+  .social ul li:hover {
+    -webkit-transform: translate(110px, 0);
+    -moz-transform: translate(110px, 0);
+    -ms-transform: translate(110px, 0);
+    -o-transform: translate(110px, 0);
+    transform: translate(110px, 0);
+    background: rgba(255, 255, 255, 0.4);
+  }
+  .social ul li:hover a {
+    color: #000;
+    text-shadow: 0 0 5px #051a1d;
+    text-decoration: none;;
+  }
+  .social ul li:hover i {
+    color: #fff;
+    background: #051a1d;
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -ms-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+  }
+  .social ul li i{
+    margin-left: 30px;
+    color: #000;
+    background: #fff;
+    padding: 10px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    background: #ffffff;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  .social a{
+      font-size: 18px;
+  }
+  
+  @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+  
+  a, a:hover {
+      text-decoration: none;
+  }
+  
+  .socialbtns, .socialbtns ul, .socialbtns li {
+    margin: 0;
+    padding: 5px;
+  }
+  
+  .socialbtns li {
+      list-style: none outside none;
+      display: inline-block;
+  }
+  
+  .socialbtns .fa {
+      width: 40px;
+      height: 28px;
+      color: #000;
+      background-color: #FFF;
+      padding-top: 12px;
+      border-radius: 22px;
+      -moz-border-radius: 22px;
+      -webkit-border-radius: 22px;
+      -o-border-radius: 22px;
+      transition: all 0.5s;
+  }
+  
+  .socialbtns .fa:hover {
+      color: #FFF;
+      background-color: #051a1d;
+  }
+  .contain-menu-content{
     position:absolute;
     display: flex;
     flex-wrap: wrap;
@@ -671,12 +423,105 @@ a, a:hover {
         border-bottom:1px solid grey;
     }
 }
-.footer{
-    border-top:1px solid grey;
+.card-page{
     width:100vw;
-    height:70vh;
-    background-color: #000;
+    height:160vh;
+    background-color: #f7fcfc;
 }
+
+@media only screen and (max-width:805px)
+{
+    .card-page{
+        height: 240vh;
+    }
+}
+.card-start-text h1{
+    color:  rgb(22, 92, 92);
+    font-size: 40px;
+    font-weight: bold;
+    padding-top:40px;
+}
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width:80%;
+    margin:auto;
+    margin-top:50px;
+    margin-bottom:50px;
+
+}
+.card{
+    width:300px;
+    height:400px;
+    border:1px double rgb(184, 184, 184);
+    background-color: #ffffffce;
+    margin-right:10px;
+    margin-left:10px;
+    margin-top:12px;
+    margin-bottom:12px;
+}
+.card img{
+    width:160px;
+    height:140px;
+}
+.card h1{
+    font-family: sans-serif;
+    color:rgb(33, 85, 85);
+    
+}
+.card-information{
+    max-width: 70%;
+    margin:auto;
+}
+.card-information p{
+    color:#88898a;
+    margin-top: 10px;
+}
+.nav-btn{
+    padding:5px;
+    color:white;
+    width:40%;
+    height: 30px;
+    margin:auto;
+    margin-top: 8%;
+    padding-top:14px;
+    border:1px solid rgb(122, 122, 122);
+    border-radius: 2px;
+    color:rgb(11, 51, 51);
+    transition: all 0.5s;
+}
+.nav-btn:hover {
+    color:rgb(219, 248, 248);
+    border:1px solid rgb(68, 95, 95);
+    background-color: cadetblue;
+}
+.card-4 img{
+    width:130px;
+    height:100px;
+    margin-top:20px;
+    margin-bottom:25px;
+}
+.card-3 img{
+    width:230px;
+    height:170px;
+}
+.card-3 h1{
+    margin-top:-30px;
+}
+.card a{
+    font-weight: bolder;
+}
+.footer{
+    width:100vw;
+    height:100vh;
+    background-image: url(../images/footer-bg.png);
+    background-position: center;
+    background-size: cover;
+    padding-top:300px;
+}
+
 .contain-footer{
     display:flex;
     flex-wrap: wrap;
@@ -687,7 +532,7 @@ a, a:hover {
     margin-bottom:40px;
 }
 .contain-footer h1{
-    color:#b3401a;
+    color: rgb(22, 92, 92);
     margin-bottom:15px;
 }
 .logo-footer{
@@ -711,42 +556,41 @@ a, a:hover {
     transition: all 0.5s;
 }
 .contain-footer a{
-    color:grey;
+    color: rgb(0, 58, 58);
 }
 .contain-footer li:hover{
     text-decoration: underline;
-    color:#8b2e00
+    color:#8b2e00;
 }
 .information-footer span{
-    color:#fe6f277c;
+    color:#0432477c;
     font-weight: bold;
     font-size: 20px;
 }
 
-@media only screen and (max-width:700px)
-{
-    .footer{
-        height:100vh;
-    }
-}
+
 @media only screen and (max-width:500px)
 {
    .contain-footer{
     width:80%;
     margin-left:auto;
    }
+   .copy-right{
+
+    font-size: 10px;
+    }
+
 }
 .information-footer p{
-    color:grey;
+    color: rgb(0, 58, 58);
     margin-bottom:25px;
 }
 .footer p{
-    color:grey;
+    color: rgb(0, 58, 58);
 
 }
 .copy-right{
     border-top:1px solid rgb(82, 82, 82);
     padding-top:40px;
     font-size: 15px;
-
 }
