--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ body {
     position:relative;
     width:100vw;
     height:100vh;
-    background-image: url(../images/main-page-bg.png);
+    background-image: url(../images/Optimized-main-page-bg.png);
     background-size: cover;
     background-position: center;
 }
