--- a/css/quiz-subject.css
+++ b/css/quiz-subject.css
@@ -444,6 +444,7 @@ nav a:hover{
 
 }
 .card{
+    position: relative;
     width:300px;
     height:400px;
     border:1px double rgb(184, 184, 184);
@@ -563,4 +564,47 @@ nav a:hover{
     border-top:1px solid rgb(82, 82, 82);
     padding-top:40px;
     font-size: 15px;
+}
+.card-information h1:hover{
+    text-decoration: underline;
+}
+.hidden {
+    display:none;
+}
+.card-subject{
+    overflow-y: scroll;
+    position :absolute;
+    top:-1px;
+    left:-1px;
+     width:300px;
+     height:400px;
+     border:1px double rgb(184, 184, 184);
+     background-color: #ffffff;
+}
+.card-subject .chapter-button
+{
+    padding:5px;
+    border:1px solid grey;
+    width:250px;
+    height:20px;
+    margin:auto;
+    margin-top:4px;
+    margin-bottom:4px;
+}
+.close-modal {
+
+    font-size: 2.5rem;
+    color: rgba(51, 51, 51, 0.842);
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+.close-subject{
+    display: flex;
+    margin-left:200px;
+}
+
+.close-subject h4{
+    margin-top: 13px;
+    color: rgba(51, 51, 51, 0.842);
 }
